# tinykv

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs
capnp/: tinykv.capnp
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/db/: conn.rs  mod.rs
src/entity/: data.rs  mod.rs  prelude.rs
src/kv/: mod.rs
src/rpc/: server.rs
src/utils/: fs.rs
