[package]
name = "tinykv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
actix = "0.13"
anyhow = "1"
capnp = "0.14"
capnp-rpc = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.9"

[build-dependencies]
capnpc = "0.14"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
